--- a/ts-webgame/lecture/package.json
+++ b/ts-webgame/lecture/package.json
@@ -1,7 +1,6 @@
 {
   "name": "lecture",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,6 +8,7 @@
   "author": "hcs1105",
   "license": "MIT",
   "dependencies": {
-    "typescript": "^4.3.5"
-  }
+    "typescript": "^4.6.3"
+  },
+  "description": ""
 }
