--- a/lecture/ts-webgame/tsconfig.json
+++ b/lecture/ts-webgame/tsconfig.json
@@ -8,13 +8,12 @@
     "noImplicitReturns": true,
     "strict": true,
     "allowJs": true,
-    "checkJs": true,
     "lib": ["DOM", "ES5", "ES2015", "ES2016", "ES2017", "ES2018", "ES2019", "ES2020"],
     "target": "ES2015" // ES6 = ES2015(공식 명칭), ES2016, ES2017, ES2018, ES2019, ES2020
   },
-  "exclude": ["*.js"], // 모든 js 파일을 제외한다는 의미입니다.
   /*
-  "include": ["gugudan.ts"],
+  "include": ["gugudan.ts"], // 컴파일할 파일들을 적습니다.
+  "exclude": ["*.js"], // 모든 js 파일을 포함하지 않겠다는 의미입니다.
   "extends": ""
   */
 }
